--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.ziyawang.ziyadaily"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.0.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -40,6 +40,8 @@ dependencies {
     compile files('libs/ShareSDK-Wechat-Core-2.8.3.jar')
     compile files('libs/ShareSDK-Wechat-Favorite-2.8.3.jar')
     compile files('libs/ShareSDK-Wechat-Moments-2.8.3.jar')
+    compile files('libs/jcore-android_v1.1.3.jar')
+    compile files('libs/jpush-android_v3.0.6.jar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jiechic.library:xUtils:2.6.14'
@@ -50,6 +52,15 @@ dependencies {
     compile 'com.uwetrottmann.photoview:library:1.2.4'
     compile 'com.umeng.analytics:analytics:latest.integration'
     testCompile 'junit:junit:4.12'
-    compile files('libs/jcore-android_v1.1.3.jar')
-    compile files('libs/jpush-android_v3.0.6.jar')
+    compile 'com.pingxx:pingpp-core:2.1.11'
+    // 必须添加
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
+    // 使用微信支付时添加,具体版本参考微信官方文档
+    compile 'com.pingxx:pingpp-alipay:2.1.11'
+    // 使用支付宝时添加
+    compile 'com.pingxx:pingpp-upacp:2.1.11'
+    // 使用银联支付时添加
+    compile files('libs/gson-2.2.4.jar')
+    compile files('libs/okhttp-2.0.0-RC1.jar')
+    compile files('libs/okio-1.0.0.jar')
 }
